--- a/styles/main.css
+++ b/styles/main.css
@@ -1,28 +1,15 @@
-#intro {
-     background-image: url('../images/intro2.jpg');
-     background-size: cover;
-     background-position: center center;
-     position: relative;
-     height: 100vh;
-     z-index: 1;
-}
-#explanation1 {
-  background-image: url('../images/boat.jpg');
+body,
+html{
+    overflow: hidden;
+    margin: 0;
+  }
+
+.image {
   background-size: cover;
   background-position: center center;
-  position: relative;
   height: 100vh;
   z-index: 1;
 }
-
-#text-explanation1 {
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  padding: 20px;
-  margin-top: 20%;
-
-}
-
 
 .overlay {
   position: absolute;
@@ -32,13 +19,62 @@
   background-color: rgba(0, 0, 0, 0.4);
 }
 
+.text {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+}
+
 .text-center {
-  background-color: #;
   color: #fff;
   margin-top: 20%;
   z-index: 3;
 }
 
+#intro {
+     background-image: url('../images/intro.jpg');
+}
+
 h1 {
   font-size: 400%
+}
+
+#explanation1 {
+  background-image: url('../images/boat.jpg');
+
+}
+
+#text-explanation1 {
+  padding: 20px;
+  margin-top: 20%;
+
+}
+
+.btn_round_outline {
+	border-radius: 24px;
+  background: none;
+  padding: 12px 22px;
+  border: 2px solid #fff;
+  color: #fff;
+}
+
+.back {
+  padding: 9px 14px;
+  margin-left: 10px;
+  margin-top: 50vh;
+}
+
+.next {
+  padding: 9px 14px;
+  margin-right: 10px;
+  margin-top: 50vh;
+}
+
+.btn_round_outline:active {
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+}
+
+.btn_round_outline:hover {
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
 }
