--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body,
 html{
-    
+
     margin: 0;
   }
 
@@ -60,6 +60,15 @@ h1 {
 #explanation3 {
   background-image: url('../images/line.jpg');
 }
+
+#container {
+	height: 500px;
+	min-width: 310px;
+	max-width: 800px;
+}
+
+
+
 
 .btn_round_outline {
 	border-radius: 24px;
