--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body,
 html{
-    overflow: hidden;
+
     margin: 0;
   }
 
@@ -18,11 +18,11 @@ html{
   height: 100%;
   width: 100%;
   z-index: 2;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .text {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(28, 28, 28, 0.5);
   color: #fff;
 }
 
@@ -45,7 +45,7 @@ h1 {
   font-size: 400%
 }
 
-#explanation1 {
+.boat {
   background-image: url('../images/boat.jpg');
 }
 
@@ -55,11 +55,11 @@ h1 {
   font-size: 2.1vh;
 }
 
-#explanation2 {
-  background-image: url('../images/line.jpg');
+.guard{
+  background-image: url('../images/guard.jpg');
 }
 
-#explanation3 {
+.explanation3 {
   background-image: url('../images/line.jpg');
 }
 
@@ -83,6 +83,7 @@ h1 {
   padding: 9px 14px;
   margin-left: 10px;
   margin-top: 45vh;
+  z-index: 100;
 }
 
 .next {
@@ -90,6 +91,7 @@ h1 {
   padding: 9px 14px;
   margin-right: 10px;
   margin-top: 45vh;
+  z-index: 100;
 }
 
 .btn_round_outline:active {
