--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body,
 html{
-
+    overflow: hidden;
     margin: 0;
   }
 
@@ -22,8 +22,9 @@ html{
 }
 
 .text {
-  background-color: rgba(28, 28, 28, 0.5);
+  background-color: rgba(28, 28, 28, 0.6);
   color: #fff;
+  font-family: Lato, Verdana, sans-serif;
 }
 
 .text-center {
@@ -52,19 +53,29 @@ h1 {
 .textbox {
   padding: 15px;
   margin-top: 20%;
-  font-size: 2.1vh;
+  font-size: 2.2vh;
 }
 
 .guard{
   background-image: url('../images/guard.jpg');
 }
 
-.explanation3 {
-  background-image: url('../images/line.jpg');
+.welcome {
+  background-image: url('../images/welcome.jpg');
 }
 
-#container {
-	height: 400px;
+.antiimmigrant {
+  background-image: url('../images/antiimmigrant.jpg');
+}
+
+#container1 {
+	height: 350px;
+
+	max-width: 800px;
+  margin-top: 50px;
+}
+#container2 {
+	height: 300px;
 	min-width: 310px;
 	max-width: 800px;
 }
@@ -83,7 +94,6 @@ h1 {
   padding: 9px 14px;
   margin-left: 10px;
   margin-top: 45vh;
-  z-index: 100;
 }
 
 .next {
@@ -91,7 +101,6 @@ h1 {
   padding: 9px 14px;
   margin-right: 10px;
   margin-top: 45vh;
-  z-index: 100;
 }
 
 .btn_round_outline:active {
