--- a/styles/main.css
+++ b/styles/main.css
@@ -20,7 +20,7 @@ html{
 }
 
 .text {
-  background-color: rgba(28, 28, 28, 0.6);
+  background-color: rgba(28, 28, 28, 0.7);
   color: #fff;
   font-family: Lato, Verdana, sans-serif;
 }
@@ -66,17 +66,74 @@ h1 {
   background-image: url('../images/antiimmigrant.jpg');
 }
 
+.street{
+  background-image: url('../images/street.jpg');
+}
+
+.market{
+  background-image: url('../images/market.jpg');
+}
+
+.market2{
+  background-image: url('../images/market2.jpg');
+}
+
+.tunnel{
+  background-image: url('../images/tunnel.jpg');
+}
+
+.falafel{
+  background-image: url('../images/falafel.jpg');
+}
+.falafel2{
+  background-image: url('../images/falafel2.jpg');
+}
+
+.metro{
+  background-image: url('../images/metro.jpg');
+}
+
+.fruits{
+  background-image: url('../images/fruits.jpg');
+}
+
+.metro2{
+  background-image: url('../images/metro2.jpg');
+}
+
+.metro3{
+  background-image: url('../images/metro3.jpg');
+}
+
+.belgium{
+  background-image: url('../images/belgium.jpg');
+}
+
+.algeria{
+  background-image: url('../images/algeria.jpg');
+}
+
 #container1 {
 	height: 340px;
 	max-width: 800px;
   margin-top: 10px;
 }
 #container2 {
+	height: 375px;
+	max-width: 800px;
+  margin-top: 20px;
+}
+
+#container3 {
 	height: 350px;
 	max-width: 800px;
   margin-top: 50px;
 }
 
+.modal-content {
+  background-color: rgba(225, 225, 225, 0.9);
+
+}
 
 .btn_round_outline {
 	border-radius: 24px;
