--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,7 @@ h1 {
   padding: 15px;
   margin-top: 20%;
   font-size: 2.2vh;
+  border-radius: 3px;
 }
 
 .guard{
@@ -127,7 +128,7 @@ h1 {
 #container3 {
 	height: 350px;
 	max-width: 800px;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 .modal-content {
@@ -136,11 +137,14 @@ h1 {
 }
 
 .btn_round_outline {
-	border-radius: 24px;
+	border-radius: 5px;
   background: none;
   padding: 12px 22px;
   border: 1px solid #fff;
   color: #fff;
+}
+.btn_small {
+  padding: 6px 11px;
 }
 
 .back {
@@ -165,4 +169,15 @@ h1 {
 .btn_round_outline:hover {
   background: rgba(0, 0, 0, 0.5);
   color: #fff;
+}
+.modal-dialog {
+   position:sticky;
+   top:70px;
+   right:90px;
+   left:auto;
+   bottom:0;
+}
+
+#modal_btn {
+  margin: 10px;
 }
