--- a/styles/main.css
+++ b/styles/main.css
@@ -31,6 +31,13 @@ html{
   z-index: 3;
 }
 
+.subheading {
+  background-color: rgba(28, 28, 28, 0.7);
+  color: #fff;
+  font-family: Lato, Verdana, sans-serif;
+
+}
+
 img {
   position: absolute;
   margin: 20px;
@@ -112,6 +119,14 @@ h1 {
 
 .algeria{
   background-image: url('../images/algeria.jpg');
+}
+
+.lyon{
+  background-image: url('../images/lyon.jpg');
+}
+
+.jean{
+  background-image: url('../images/jean.jpg');
 }
 
 #container1 {
