--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,15 @@
-body,
-html{
+html
+{
+    overflow: hidden;
+}
+
+body
+{
     overflow: hidden;
     margin: 0;
-  }
+    padding: 0;
+}
 
-  html, body {
-    overflow-x: hidden;
-    margin: 0;
-  }
-  body {
-    position: relative
-  }
 
 .image {
   background-size: cover;
