--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,8 @@
-html
-{
-    overflow: hidden;
-}
-
-body
-{
+body,
+html{
     overflow: hidden;
     margin: 0;
-    padding: 0;
-}
-
+  }
 
 .image {
   background-size: cover;
