--- a/styles/main.css
+++ b/styles/main.css
@@ -165,6 +165,18 @@ h1 {
   background-image: url('../images/supermarket.jpg');
 }
 
+.lepen {
+  background-image: url('../images/lepen.jpg');
+}
+
+.afd {
+  background-image: url('../images/afd.jpg');
+}
+
+.line {
+  background-image: url('../images/line.jpg');
+}
+
 #container1 {
 	height: 340px;
 	max-width: 800px;
